# greenprompt

./: README.md
.github/workflows/: core-deploy.yml  main.yml
api/: promptonomics.py  soon.py
core/: .env.example  .gitignore  API_DOCS.md  DEPLOYMENT.md  Dockerfile  USAGE.md  docker-compose.yml  pyproject.toml  setup.sh
core/app/: config.py  database.py  init_db.py  main.py  models.py  schemas.py  security.py
core/app/api/: analyze.py
core/app/services/: benchmark.py  energy.py  leaderboard.py  tracking.py
database/: SETUP.md
extension/: GUIDE.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/public/: manifest.json  popup.html
extension/src/: background.ts  content.ts
extension/src/injected/: App.tsx  mount.tsx
extension/src/popup/: popup.tsx
extension/src/shared/: guards.ts  messages.ts
web/: .env.example  one_page_summary.txt  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(legal)/cookies/: page.tsx
web/src/app/(legal)/privacy/: page.tsx
web/src/app/(legal)/refunds/: page.tsx
web/src/app/(legal)/terms/: page.tsx
web/src/app/api/status/: route.ts
web/src/app/status/: page.tsx
web/src/components/: ColorBends.tsx
web/src/components/core/: footer.tsx  navbar.tsx
web/src/components/landing/: CTA.tsx  FeatureDeepDives.tsx  Features.tsx  Hero.tsx  Pricing.tsx  Problem.tsx  Stats.tsx  Testimonials.tsx  index.ts
web/src/components/ui/: footer.tsx  glow.tsx  resizable-navbar.tsx
web/src/config/: CORE_CONFIG.ts
web/src/lib/: api.ts
web/src/providers/: app-provider.tsx
