[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "greenprompt-core"
version = "0.1.0"
description = "Core API service for greenprompt"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "pydantic>=2.6",
  "python-dotenv>=1.0"
]

[tool.setuptools]
packages = ["app"]

[tool.uvicorn]
factory = false

[tool.pydantic]
validate_assignment = true
