[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "greenprompt-core"
version = "1.0.0"
description = "Core API service for GreenPrompt - Analyze, optimize, and track LLM energy usage"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GreenPrompt Team", email = "reach.saad@outlook.com"}
]
keywords = ["ai", "llm", "energy", "optimization", "sustainability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.19",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "httpx>=0.26",
    "black>=23.11",
    "ruff>=0.1",
    "mypy>=1.7",
]

[tool.setuptools]
packages = ["app"]

[tool.uvicorn]
factory = false

[tool.pydantic]
validate_assignment = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
